syntax = "proto3";
import "logic.client.proto";
package pb;


service LogicServerExt {
    // 发送消息
    rpc SendMessage (SendMessageReq) returns (SendMessageResp);
}